--- a/style/real.css
+++ b/style/real.css
@@ -69,10 +69,10 @@ p {
 .content h3 {
   font-size: 24px;
   font-family: var(--default-font-family);
+  line-height: 1.5;
 }
 .content p {
   font-size: 16px;
-  font-family: var(--default-font-family);
 }
 .content {
   margin: 30px;
