--- a/style/real.css
+++ b/style/real.css
@@ -20,14 +20,14 @@ h6 {
 }
 
 h1 {
-  font-size: 96px;
+  font-size: 80px;
   line-height: 1.4;
 }
 
 h2 {
   font-size: 64px;
 }
-h4 {
+h3 {
   font-size: 48px;
 }
 p {
@@ -39,7 +39,7 @@ p {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 
 .hero p {
@@ -57,7 +57,7 @@ p {
 }
 
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 
 .content h1 {
@@ -137,7 +137,7 @@ footer .contact-box {
   padding: 30px;
   border-radius: 10px;
 }
-footer .contact-box a {
+footer .contact-box p {
   margin: 0;
 }
 footer .email-link {
@@ -172,9 +172,6 @@ footer .social-links a:hover {
     font-size: 35px;
   }
 
-  .hero {
-    padding: 80px 20px;
-  }
   .project-description {
     padding: 0;
     text-align: center;
