--- a/style/real.css
+++ b/style/real.css
@@ -62,7 +62,7 @@ p {
 
 .content h1 {
   font-size: 64px;
-  line-height: 1.5;
+  line-height: 80px;
 }
 .content h2 {
   font-size: 18px;
@@ -75,7 +75,7 @@ p {
   line-height: 1.5;
 }
 .content p {
-  font-size: 16px;
+  font-size: 14px;
 }
 .content {
   margin: 30px;
@@ -167,9 +167,13 @@ footer .social-links a:hover {
 @media (max-width: 900px) {
   h1 {
     font-size: 40px;
+    line-height: 1.5;
   }
   h2 {
-    font-size: 35px;
+    font-size: 44px;
+  }
+  h3 {
+    font-size: 26px;
   }
 
   .project-description {
